# SDSmap

./: README.md  pyproject.toml
sdsmap/: __init__.py  decoder.py  encoder.py
